# ghost

./: CMakeLists.txt  README  build.sh  run.sh
db/: test.db
libofono-qt/: qmake_to_cmake.sh
libofono-qt/lib/: CMakeLists.txt
mongoose/: CMakeLists.txt
src/: CMakeLists.txt  database.cpp  database.h  main.cpp  ofono.cpp  ofono.h  webserver.cpp  webserver.h
www/: index.html
