PROJECT(core)

SET(core_SOURCES
	main.cpp
	ofono.cpp
)

SET(core_HEADERS
	ofono.h
)

INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${ofono-qt_SOURCE_DIR})
INCLUDE_DIRECTORIES(${QT_QTDBUS_INCLUDE_DIR})

QT4_WRAP_CPP(core_HEADERS_MOC ${core_HEADERS})

ADD_EXECUTABLE(core ${core_SOURCES} 
    ${core_HEADERS_MOC})

TARGET_LINK_LIBRARIES(core ${QT_LIBRARIES} ofono-qt)
